fix style on tablet mobile in hover cards price title and text about page margins

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -35,9 +35,9 @@
     &:not(:last-child) {
       margin-bottom: 16px;
 
-      @include tablet {
-        margin-bottom: 4px;
-      }
+      // @include tablet {
+      //   margin-bottom: 4px;
+      // }
     }
   }
 
