--- a/styles/blocks/_services.scss
+++ b/styles/blocks/_services.scss
@@ -28,6 +28,10 @@
   }
 }
 
+.services ul {
+  margin-bottom: 0;
+}
+
 .service {
   position: relative;
   display: flex;
